# capi20

capidivert/: Makefile.am  Makefile.in  configure  configure.in
capidivert/capidivert/: Makefile.am  Makefile.in  capi_enc.c  cfctrl.c
capiinfo/: Makefile.am  capiinfo.8  capiinfo.c  mkinstalldirs
libcapi20/: Makefile.in  README  capi20.c  capi20.h  capicmd.h  capidyn.c  capifunc.c  capiutils.h  configure  configure.in  convert.c  mkinstalldirs
mISDNv1/: Makefile  README
mISDNv1/mISDN/: Kconfig  Makefile  app_plci.c  appl.c  avm_fritz.c  bfsi.c  bfsi.h  bfsi_spi.h  bfsi_tlg.c  capi.c  contr.c  core.c  core.h  debugtool.c  dsp.h  dsp_audio.c  dsp_cmx.c  dsp_core.c  dsp_hwec.c  dsp_kb1ec.c  dsp_mec2.c  dsp_mg2ec.c  dsp_octwareec.c  dsp_octwareec.h  dsp_oslec.c  dsp_pipeline.c  dss1.h  helper.c  hfc_multi.c  hfc_multi.h  hfc_pci.c  hfcs_mini.c  hfcs_mini.h  hfcs_usb.c  hfcs_usb.h  hfcsmcd.h  l1oip.h  l1oip_core.c  l3_ndss1.c  l3_udss1.c  (+34 more)
mISDNv1/mISDN_include/: bfsi_tlg.h  isdn_compat.h  mISDNif.h
rcapid/: Makefile.am  Makefile.in  README  configure  configure.in  mkinstalldirs  rcapicmd.h  rcapid.8  rcapid.c
